# pydis-jam23

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: lint.yaml  test.yaml
src/: __init__.py  __main__.py  ui_app.py
src/pydis_jam23/: __init__.py  __main__.py  cli_app.py  ui_app.py
src/pydis_jam23/codecs/: __init__.py  common.py  concat.py  edges.py  joke.py  lsb.py  lsbimage.py  lsbjoke.py  mlsb.py  noise.py  notlsb.py  ssdb.py
src/pydis_jam23/ui_files/: main.ui
src/pydis_jam23/web/: __init__.py
src/pydis_jam23/web/static/: app.js  style.css
src/pydis_jam23/web/templates/: action.j2  base.j2  codec.j2  index.j2
src/ui_files/: main.ui
tests/: common.py  test_codec_edges.py  test_codec_lsb.py  test_hide_message.py  test_my_module.py
